2003-06-08  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (output_src): Remove typo(+).
	Suggested by "jakobfrandsen" <jakobfrandsen@yahoo.dk>.

2003-06-07  Mario Kleiner <mario.kleiner@tuebingen.mpg.de>

	* output-mif.c (output_mif_writer): fixed bug in output 
	of spline sample points.

2003-03-10  Martin Weber <martweb@gmx.net>

	* output-dxf.c: Now checks memory allocation.

2003-03-09  Martin Weber <martweb@gmx.net>

	* output-sk.c: Fixed sketch output.

2003-02-13  Masatake YAMATO  <yamato@redhat.com>

	* input.c (_at_input_format_entry): Added new field, 
	user_data_destroy_func.
	included private.h.
	(at_input_format_new): added data, user_data_destroy_func
	as arguments. Type of reader reader is changed to at_input_func.
	(at_input_init): Use g_str_hash and g_str_equal.
	(at_input_format_free): call user_data_destroy_func.
	(at_input_add_handler_full): added data, user_data_destroy_func
	as arguments. 
	(at_input_add_handler_full): call g_ascii_strdown. 
	(at_input_get_handler_by_suffix): return type is changed
	to at_bitmap_reader.
	(at_input_get_handler_by_suffix): call g_ascii_strdown. 

	* main.c: included glib.h.
	at_input_func is used.

	* input.h (at_input_func): added new type.
	included glib.

	* input.c: include private.h.

	* input-tga.c (MAX, MIN): removed it. glib provides
	the same functions.

	* autotrace.h (at_bitmap_reader): introduced as the
	replacement of at_input_read_func.

	* input-* (input_*_reader): added an argument.

	* autotrace.c (at_bitmap_read): call reader->func.

2003-02-09  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c: Include private.h.
	(autotrace_init): invoke at_input_init and
	at_module_init.

	* input.c: rewrote. All imagemagick code are moved
	to module.c.

	* input.[ch] (at_input_add_handler_full): New function.

	* module.c: New file.

	* configure.in: Checking pkg-config.

	* private.h: New file

2003-02-09  Masatake YAMATO  <yamato@redhat.com>

	* main.c (USAGE2): 1.0..0.0 => 0.0..1.0.
